EX2/tests_ex22/messed_up_paths_test/expected/errors.txt
messing/up/students/Compilation_Error_gets_10/error1.c: In function 'main':
messing/up/students/Compilation_Error_gets_10/error1.c:5:5: error: expected declaration or statement at end of input
    5 |     printf("dfg");
      |     ^~~~~~